Add Delivery and Takeout icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,3 +107,9 @@ img {
   clip-path:polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
+ion-icon {
+  font-size: 400px;
+  color: white;
+  background-color: #0078ae;
+  border-radius: 10%;
+}
