--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,9 @@ a:hover {
   list-style-type: none;
 }
 
+.anotherPizza {
+  display: none;
+}
 #question {
   font-weight: 700;
   color:white;
@@ -97,6 +100,10 @@ li:nth-child(even) {
 }
 
 #address {
+  display: none;
+}
+
+.anotherPizza {
   display: none;
 }
 
