Fix bugs related to order total

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,15 @@ h1 {
 .center {
   width: 100px;
   margin:auto;
+  font-weight: 900;
+}
+
+.vertAlign{
+  width: 100px;
+  margin:auto;
+  line-height: 400px;
+  text-align: center;
+  font-weight: 1000;
 }
 
 .centerWide{
@@ -49,35 +58,6 @@ h1 {
   width: 90%;
 }
 
-a {
-  cursor: pointer;
-  color: #0088cc;
-}
-
-a:hover {
-  text-decoration: underline;
-  text-transform: uppercase;
-}
-
-.aTag {
-  margin:auto;
-  width: 100%;
-  text-align: right;
-}
-
-#answer {
-  list-style-type: none;
-}
-
-.morePizzaOrNot {
-  display: none;
-}
-#question {
-  font-weight: 700;
-  color:white;
-  list-style-type: none;  
-}
-
 .color {
   font-weight: 700;
   color:white;
@@ -88,18 +68,71 @@ a:hover {
   margin-left:5px;
 }
 
-li:nth-child(odd) {
-  background-color: #b66c61;
-}
-li:nth-child(even) {
-  background-color: #f88778;
+#anim {
+  animation-duration: 5s;
+  animation-name: slidein;
+  animation-iteration-count: 1;
 }
 
-.hide {
+@keyframes slidein {
+  0% {
+    margin-left: 0%;
+  }
+  50% {
+    margin-left: 300px;
+  }
+  100% {
+    margin-left: 0%;
+  }
+}
+
+#restart {
   display: none;
 }
 
-#address {
+.labelWt {
+  color: orange;
+  font-weight: 500;
+}
+
+.pizzaOrderBlock {
+  display: none;
+  background-color: whitesmoke;
+}
+
+#carryOutOnly {
+  display:none;
+}
+
+.jumbotron {
+  background-color: whitesmoke;
+}
+
+#delivery{
+  cursor: pointer;
+  color: #0088cc;
+}
+
+#delivery:hover{
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+#carryout{
+  cursor: pointer;
+  color: #0088cc;
+}
+
+#carryout:hover{
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+#deliveryForm {
+  display: none;
+}
+
+#carryOutForm {
   display: none;
 }
 
@@ -113,33 +146,44 @@ li:nth-child(even) {
 
 img {
   height: 45vh;
-  background-image: linear-gradient(
-    to right bottom,
-    rgba(128, 214, 113, 0.801),
-    rgba(40, 180, 133, 0.801)), 
-  url(img/pizza.jpg);
-  background-size: cover;
-  background-position: top;
-  clip-path:polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  float: right;
+  margin-bottom:10px;
+  height: 110px;
+  width: 110;
 }
 
 ion-icon {
-  font-size: 400px;
+  font-size: 350px;
+    /* background-color: #0078ae; */
+}
+
+.iconBlock2 {
+  margin-top:0px;
   color: white;
-  background-color: #0078ae;
   border-radius: 10%;
 }
 
-.colorRed {
-  background-color: orange;
+#refresh{
+  display: none;
 }
-
 .colorBlue {
   background-color:blue;
 }
 
 ul#cart {
-  list-style-type: none;  
+  list-style-type: none; 
+}
+
+ul#cart1 {
+  list-style-type: none; 
+}
+
+.bottomLine {
+  border-bottom: 5px solid red;
+}
+
+.hideDelivery {
+  display: none;
 }
 
 ol#toppings {
@@ -154,10 +198,32 @@ ol#toppings {
   display: none;
 }
 
-.finalDisplay {
+.finalView{
   display:none;
 }
 
 .head {
   display:none;
+}
+
+#cName {
+  color: #f52409;
+}
+
+#cName1 {
+  color: #f52409;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.cartView {
+  display:none;
+  background-color: whitesmoke;
+  margin: 10px;
+}
+
+.hidden{
+  display: none;
 }
