--- a/css/styles.css
+++ b/css/styles.css
@@ -146,20 +146,10 @@ h1 {
   display: none;
 }
 
-img {
-  /* height: 45vh;
- 
-  width: 110; */
-}
-
 .imgPizza {
   float: right;
   margin-bottom:10px;
   height: 110px;
-}
-
-.imgClass {
-  
 }
 
 ion-icon {
@@ -184,19 +174,23 @@ ion-icon {
 }
 
 ul#cart3 {
-  list-style-type: none; 
+  list-style-type: none;
+  padding-left: 0px;
 }
 
 ul#cart4 {
-  list-style-type: none; 
+  list-style-type: none;
+  padding-left: 0px;
 }
 
 ul#cart1 {
-  list-style-type: none; 
+  list-style-type: none;
+  padding-left: 0px;
 }
 
 ul#cart2 {
-  list-style-type: none; 
+  list-style-type: none;
+  padding-left: 0px;
 }
 .bottomLine {
   border-bottom: 5px solid red;
