--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,10 @@ ol#toppings {
 }
 
 .h2Box{
-  margin-bottom:40px;
+  margin-bottom:20px;
   padding-top: 10px;
+}
+
+.second {
+  padding-top:10px;
 }
